[package]
name = "pattern_rust"
version = "0.1.0"
authors = ["rdan <dan.rusei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
crossbeam-channel = "0.3"
rand = "0.7.3"
threadpool = "1.8.0"

