[package]
name = "pattern_Rust_Async"
version = "0.1.0"
authors = ["rdan <dan.rusei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

