[package]
name = "pattern_rust_async"
version = "0.1.0"
authors = ["rdan <dan.rusei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
surf = "1.0"
async-std = {version = "1.5", features = ["attributes"]}
futures-channel = "0.3"

